# mujoco_experiments

./: .gitignore  README.md  main.py  pyproject.toml  pyrightconfig.json
scripts/: build_mujoco_usd.sh  probe_usd_support.py  run_kitchen_env.py  run_simulate_kitchen.sh  view_kitchen_usd.py  worldlabs_from_images.py
src/kitchen_usd_mujoco/: __init__.py  env.py  loaders.py  worldlabs_marble.py
